[package]
name = "ssh-collection-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
tokio = { version = "1.27.0", features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
